fix wrong background image URL

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ footer,header,hgroup,menu,nav,section {
 body {
 	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Helvetica,"Microsoft Yahei",sans-serif;;
 	line-height: 1.5;
-  background: #eee url("assets/img/noise.png");
+  background: #eee url("http://owlzone.org/assets/img/noise.png");
 }
 
 ::selection {
